; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_core.c_send_packet_nocare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_core.c_send_packet_nocare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_packet = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hpsb_packet*)* @send_packet_nocare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_packet_nocare(%struct.hpsb_packet* %0) #0 {
  %2 = alloca %struct.hpsb_packet*, align 8
  store %struct.hpsb_packet* %0, %struct.hpsb_packet** %2, align 8
  %3 = load %struct.hpsb_packet*, %struct.hpsb_packet** %2, align 8
  %4 = call i64 @hpsb_send_packet(%struct.hpsb_packet* %3)
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.hpsb_packet*, %struct.hpsb_packet** %2, align 8
  %8 = call i32 @hpsb_free_packet(%struct.hpsb_packet* %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i64 @hpsb_send_packet(%struct.hpsb_packet*) #1

declare dso_local i32 @hpsb_free_packet(%struct.hpsb_packet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
